--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         <div class="row">
             <div class="col--md-4 col-sm-4 col-xs-4">
                 <a href="index.html" id="logo">
-                <img src="img/logo.png" width="190" height="23" alt="" data-retina="true" class="hidden-xs">
-                <img src="img/logo_mobile.png" width="59" height="23" alt="" data-retina="true" class="hidden-lg hidden-md hidden-sm">
+                Mothers Serve
                 </a>
             </div>
             <nav class="col--md-8 col-sm-8 col-xs-8">
@@ -68,53 +67,9 @@
                 <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
                  <ul>
                     <li class="submenu">
-                    <a href="javascript:void(0);" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
-                    <ul>
-                        <li><a href="index.html">Home Video background</a></li>
-                        <li><a href="index_2.html">Home Static image</a></li>
-                        <li><a href="index_3.html">Home Text rotator</a></li>
-                        <li><a href="index_8.html">Home Layer slider</a></li>
-                        <li><a href="index_4.html">Home Cookie bar</a></li>
-                        <li><a href="index_5.html">Home Popup</a></li>
-                        <li><a href="index_6.html">Home Mobile synthetic</a></li>
-                        <li><a href="index_7.html">Top Menu version 2</a></li>
-                    </ul>
-                    </li>
-                    <li class="submenu">
-                    <a href="javascript:void(0);" class="show-submenu">Restaurants<i class="icon-down-open-mini"></i></a>
-                    <ul>
-                        <li><a href="list_page.html">Row listing</a></li>
-                        <li><a href="grid_list.html">Grid listing</a></li>
-                        <li><a href="map_listing.html">Map listing</a></li>
-                        <li><a href="detail_page.html">Restaurant Menu</a></li>
-                        <li><a href="submit_restaurant.html">Submit Restaurant</a></li>
-                        <li><a href="cart.html">Order step 1</a></li>
-                        <li><a href="cart_2.html">Order step 2</a></li>
-                        <li><a href="cart_3.html">Order step 3</a></li>
-                        <li><a href="cart_datepicker.html">Order Date/Time picker</a></li>
-                    </ul>
-                    </li>
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="faq.html">Faq</a></li>
-                    <li class="submenu">
-                    <a href="javascript:void(0);" class="show-submenu">Pages<i class="icon-down-open-mini"></i></a>
-                    <ul>
-                        <li><a href="RTL_version/index.html">RTL version</a></li>
-                        <li><a href="admin.html">Admin section</a></li>
-                        <li><a href="submit_driver.html">Submit Driver</a></li>
-                        <li><a href="#0" data-toggle="modal" data-target="#login_2">User Login</a></li>
-                        <li><a href="#0" data-toggle="modal" data-target="#register">User Register</a></li>
-                        <li><a href="detail_page_2.html">Restaurant detail page</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="coming_soon/index.html">Coming soon page</a></li>
-                        <li><a href="shortcodes.html">Shortcodes</a></li>
-                        <li><a href="icon_pack_1.html">Icon pack 1</a></li>
-                        <li><a href="icon_pack_2.html">Icon pack 2</a></li>
-                    </ul>
+                    <a href="index.html">Home</a>
                     </li>
                     <li><a href="#0" data-toggle="modal" data-target="#login_2">Login</a></li>
-                    <li><a href="#0">Purchase this template</a></li>
                 </ul>
             </div><!-- End main-menu -->
             </nav>
@@ -129,9 +84,8 @@
 	<div id="sub_content">
     	<div id="thumb"><img src="img/thumb_restaurant.jpg" alt=""></div>
                      <div class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i> (<small><a href="detail_page_2.html">Read 98 reviews</a></small>)</div>
-                    <h1>Mexican TacoMex</h1>
-                    <div><em>Mexican / American</em></div>
-                    <div><i class="icon_pin"></i> 135 Newtownards Road, Belfast, BT4 1AB - <strong>Delivery charge:</strong> $10, free over $15.</div>
+                    <h1>Mothers Serve</h1>
+                    <div><i class="icon_pin"></i> Bangalore - <strong>Delivery charge:</strong> $10, free over $15.</div>
     </div><!-- End sub_content -->
 </div><!-- End subheader -->
 </section><!-- End section -->
@@ -158,7 +112,6 @@
 					<ul id="cat_nav">
 						<li><a href="#starters" class="active">Starters <span>(141)</span></a></li>
 						<li><a href="#main_courses">Main Courses <span>(20)</span></a></li>
-						<li><a href="#beef">Beef <span>(12)</span></a></li>
 						<li><a href="#desserts">Desserts <span>(11)</span></a></li>
 						<li><a href="#drinks">Drinks <span>(20)</span></a></li>
 					</ul>
@@ -441,7 +394,7 @@
 					<tr>
 						<td>
                         	<figure class="thumb_menu_list"><img src="img/menu-thumb-7.jpg" alt="thumb"></figure>
-							<h5>7. Beef Taco</h5>
+							<h5>7. Taco</h5>
 							<p>
 								Fuisset mentitum deleniti sit ea.
 							</p>
@@ -456,7 +409,7 @@
 					<tr>
 						<td>
                         	<figure class="thumb_menu_list"><img src="img/menu-thumb-8.jpg" alt="thumb"></figure>
-							<h5>8. Minced Beef Double Layer</h5>
+							<h5>8. Minced Double Layer</h5>
 							<p>
 								Fuisset mentitum deleniti sit ea.
 							</p>
@@ -551,228 +504,6 @@
                                 </label>
                                 <label>
                                 <input type="radio" value="option3" name="options_9" >Extra Large <span>+ $8.30</span>
-                                </label>
-                                <h5>Add ingredients</h5>
-                                <label>
-                                <input type="checkbox" value="">Extra Tomato <span>+ $4.30</span>
-                                </label>
-                                <label>
-                                <input type="checkbox" value="">Extra Peppers <span>+ $2.50</span>
-                                </label>
-                                <a href="#0" class="add_to_basket">Add to cart</a>
-                            </div>
-                        </div>
-                    </td>
-					</tr>
-					</tbody>
-					</table>
-					<hr>
-					<h3 id="beef">Beef</h3>
-					<p>
-						Te ferri iisque aliquando pro, posse nonumes efficiantur in cum. Sensibus reprimique eu pro. Fuisset mentitum deleniti sit ea.
-					</p>
-					<table class="table table-striped cart-list ">
-					<thead>
-					<tr>
-						<th>
-							 Item
-						</th>
-						<th>
-							 Price
-						</th>
-						<th>
-							 Order
-						</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-11.jpg" alt="thumb"></figure>
-							<h5>11. Beef Enchilada Wrap</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 11,70</strong>
-						</td>
-						<td class="options">
-                        <div class="dropdown dropdown-options">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
-                            <div class="dropdown-menu">
-                                <h5>Select an option</h5>
-                                <label>
-                                <input type="radio" value="option1" name="options_10" checked>Medium <span>+ $3.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option2" name="options_10" >Large <span>+ $5.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option3" name="options_10" >Extra Large <span>+ $8.30</span>
-                                </label>
-                                <h5>Add ingredients</h5>
-                                <label>
-                                <input type="checkbox" value="">Extra Tomato <span>+ $4.30</span>
-                                </label>
-                                <label>
-                                <input type="checkbox" value="">Extra Peppers <span>+ $2.50</span>
-                                </label>
-                                <a href="#0" class="add_to_basket">Add to cart</a>
-                            </div>
-                        </div>
-                    </td>
-					</tr>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-12.jpg" alt="thumb"></figure>
-							<h5>12. Chicken Fillet Taco</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 12,40</strong>
-						</td>
-						<td class="options">
-                        <div class="dropdown dropdown-options">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
-                            <div class="dropdown-menu">
-                                <h5>Select an option</h5>
-                                <label>
-                                <input type="radio" value="option1" name="options_11" checked>Medium <span>+ $3.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option2" name="options_11" >Large <span>+ $5.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option3" name="options_11" >Extra Large <span>+ $8.30</span>
-                                </label>
-                                <h5>Add ingredients</h5>
-                                <label>
-                                <input type="checkbox" value="">Extra Tomato <span>+ $4.30</span>
-                                </label>
-                                <label>
-                                <input type="checkbox" value="">Extra Peppers <span>+ $2.50</span>
-                                </label>
-                                <a href="#0" class="add_to_basket">Add to cart</a>
-                            </div>
-                        </div>
-                    </td>
-					</tr>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-13.jpg" alt="thumb"></figure>
-							<h5>13. Tiger Prawn & Chorizo</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 24,71</strong>
-						</td>
-						<td class="options">
-                        <div class="dropdown dropdown-options">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
-                            <div class="dropdown-menu">
-                                <h5>Select an option</h5>
-                                <label>
-                                <input type="radio" value="option1" name="options_12" checked>Medium <span>+ $3.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option2" name="options_12" >Large <span>+ $5.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option3" name="options_12" >Extra Large <span>+ $8.30</span>
-                                </label>
-                                <h5>Add ingredients</h5>
-                                <label>
-                                <input type="checkbox" value="">Extra Tomato <span>+ $4.30</span>
-                                </label>
-                                <label>
-                                <input type="checkbox" value="">Extra Peppers <span>+ $2.50</span>
-                                </label>
-                                <a href="#0" class="add_to_basket">Add to cart</a>
-                            </div>
-                        </div>
-                    </td>
-					</tr>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-14.jpg" alt="thumb"></figure>
-							<h5>14. Fillet Steak & Chorizo</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 15,30</strong>
-						</td>
-						<td class="options">
-							<a href="#0"><i class="icon_plus_alt2"></i></a>
-						</td>
-					</tr>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-15.jpg" alt="thumb"></figure>
-							<h5>15. Burrito's with Rice</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 9,70</strong>
-						</td>
-						<td class="options">
-                        <div class="dropdown dropdown-options">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
-                            <div class="dropdown-menu">
-                                <h5>Select an option</h5>
-                                <label>
-                                <input type="radio" value="option1" name="options_13" checked>Medium <span>+ $3.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option2" name="options_13" >Large <span>+ $5.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option3" name="options_13" >Extra Large <span>+ $8.30</span>
-                                </label>
-                                <h5>Add ingredients</h5>
-                                <label>
-                                <input type="checkbox" value="">Extra Tomato <span>+ $4.30</span>
-                                </label>
-                                <label>
-                                <input type="checkbox" value="">Extra Peppers <span>+ $2.50</span>
-                                </label>
-                                <a href="#0" class="add_to_basket">Add to cart</a>
-                            </div>
-                        </div>
-                    </td>
-					</tr>
-					<tr>
-						<td>
-                        	<figure class="thumb_menu_list"><img src="img/menu-thumb-16.jpg" alt="thumb"></figure>
-							<h5>16. Mexican Burger</h5>
-							<p>
-								Fuisset mentitum deleniti sit ea.
-							</p>
-						</td>
-						<td>
-							<strong>€ 8,30</strong>
-						</td>
-						<td class="options">
-                        <div class="dropdown dropdown-options">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
-                            <div class="dropdown-menu">
-                                <h5>Select an option</h5>
-                                <label>
-                                <input type="radio" value="option1" name="options_14" checked>Medium <span>+ $3.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option2" name="options_14" >Large <span>+ $5.30</span>
-                                </label>
-                                <label>
-                                <input type="radio" value="option3" name="options_14" >Extra Large <span>+ $8.30</span>
                                 </label>
                                 <h5>Add ingredients</h5>
                                 <label>
@@ -1055,9 +786,9 @@
                 <div class="col-md-3 col-sm-3">
                     <h3>About</h3>
                     <ul>
-                        <li><a href="about.html">About us</a></li>
-                        <li><a href="faq.html">Faq</a></li>
-                         <li><a href="contacts.html">Contacts</a></li>
+                        <li><a href="#0">About us</a></li>
+                        <li><a href="#0">Faq</a></li>
+                         <li><a href="#0">Contacts</a></li>
                         <li><a href="#0" data-toggle="modal" data-target="#login_2">Login</a></li>
                         <li><a href="#0" data-toggle="modal" data-target="#register">Register</a></li>
                         <li><a href="#0">Terms and conditions</a></li>
