--- a/detail_page.html
+++ b/detail_page.html
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col--md-4 col-sm-4 col-xs-4">
                 <a href="index.html" id="logo">
-                Mothers Serve
+                Mother's Serve
                 </a>
             </div>
             <nav class="col--md-8 col-sm-8 col-xs-8">
@@ -84,7 +84,7 @@
     <div id="sub_content">
         <div id="thumb"><img src="img/thumb_restaurant.jpg" alt=""></div>
                      <div class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i> (<small><a href="detail_page_2.html">Read 98 reviews</a></small>)</div>
-                    <h1>Mothers Serve</h1>
+                    <h1>Mother's Serve</h1>
                     <div><i class="icon_pin"></i> Bangalore - <strong>Delivery charge:</strong> $10, free over $15.</div>
     </div><!-- End sub_content -->
 </div><!-- End subheader -->
