--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col--md-4 col-sm-4 col-xs-4">
                 <a href="index.html" id="logo">
-                Mothers Serve
+                Mother's Serve
                 </a>
             </div>
             <nav class="col--md-8 col-sm-8 col-xs-8">
