--- a/detail_page.html
+++ b/detail_page.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="pizza, delivery food, fast food, sushi, take away, chinese, italian food">
     <meta name="description" content="">
     <meta name="author" content="Ansonika">
-    <title>QuickFood - Quality delivery or take away food</title>
+    <title>Mother's Serve - Quality delivery or take away food</title>
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -837,7 +837,7 @@
                             <li><a href="#0"><i class="icon-vimeo"></i></a></li>
                             <li><a href="#0"><i class="icon-youtube-play"></i></a></li>
                         </ul>
-                        <p>© Quick Food 2015</p>
+                        <p>© Mother's Serve 2019</p>
                     </div>
                 </div>
             </div><!-- End row -->
